# tapedeck

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  deploy-website.yml  release.yml
scripts/: compile-macos-icon.mjs  sign-windows.mjs
server/: index.js  youtube.js  youtube.test.js
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: desktop-localhost.json
src-tauri/icons/: icon.icns
src-tauri/macos/AppIcon.icon/: icon.json
src-tauri/permissions/autogenerated/: drive_download_library.toml  drive_touch_device.toml  drive_upload_library.toml  export_library.toml  google_auth_status.toml  load_library.toml  media_set_metadata.toml  media_set_playback.toml  media_set_player_active.toml  resolve_video.toml  resolve_youtube_source.toml  save_library.toml  sign_in_with_google.toml  sign_out_google.toml
src-tauri/src/: auth.rs  dns.rs  lib.rs  library.rs  main.rs  media.rs  sync.rs  volume_keys.rs  youtube.rs
src/api/: auth.ts  library.ts  media.ts  sync.ts  updates.test.ts  updates.ts  youtube.ts
src/components/: AccountSummary.tsx  Brand.tsx  ConfirmDialog.tsx  LibraryCard.tsx  MixtapePicker.tsx  PlaybackBar.tsx  PlayerScreen.tsx  ShortcutsModal.tsx  SourceSwitcher.tsx  SyncChip.tsx  TitleBar.tsx  WelcomeScreen.tsx  YouTubePlayer.tsx
src/data/: mockPlaylist.ts
src/hooks/: useDismiss.ts
src/lib/: library.test.ts  library.ts  playback.test.ts  playback.ts  time.test.ts  time.ts  trackTitle.test.ts  trackTitle.ts  validation.test.ts  validation.ts
web/: index.html  privacy.html  terms.html
